# Signbot

./: LERME_signbot.txt  README.md
hand_gazebo/: CMakeLists.txt  package.xml
hand_gazebo/controller/: OFF_hand_gazebo_control.yaml  controllers.yaml~  finger_index_control .yaml~  finger_middle_control .yaml~  finger_third_control.yaml  finger_third_control.yaml~  fingers_control.yaml~  hand_gazebo_control.yaml~  hand_gazebo_joint_position.yaml~  hand_gazebo_joint_states.yaml~  joint_state.yaml  palm_control.yaml~  signbot_gazebo_control.yaml~  signbot_gazebo_joint_position.yaml~  trajectory_control.yaml~
hand_gazebo/launch/: OFF_hand_gazebo_control.launch  fingers_controller.launch  fingers_controller.launch~  hand_bringup_moveit.launch~  hand_control.launch  hand_gazebo_control.launch~  hand_gazebo_position.launch~  hand_trajectory_controller.launch~  hand_world.launch  joint_state_controller.launch  joint_state_controller.launch~  palm_controller.launch  palm_controller.launch~  signbot2_gazebo_control.launch~  signbot_gazebo_control.launch~  signbot_gazebo_position.launch~  signbot_gazebo_states.launch~  signbot_world.launch~
hand_moveit_config/: package.xml
hand_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  signbot_hand.srdf  signbot_hand.srdf~
hand_moveit_config/launch/: demo.launch  hand_bringup_moveit.launch  move_group.launch  move_group.launch~  moveit_planning_execution.launch~  planning_context.launch~  proto_signbot2_moveit_controller_manager.launch.xml~  sensor_manager.launch.xml  signbot_hand_bringup_moveit.launch~  signbot_hand_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  trajectory_execution.launch.xml~  warehouse.launch
rev_arm_gazebo/: CMakeLists.txt  package.xml
rev_arm_gazebo/controller/: arm_control.yaml  joint_state.yaml
rev_arm_gazebo/launch/: arm_controller.launch  joint_state_controller.launch  rev_arm_control.launch  rev_arm_world.launch
signbot_2arms_gazebo/: CMakeLists.txt  package.xml
signbot_2arms_gazebo/controller/: joint_state.yaml  l_control.yaml  l_control.yaml~  r_control.yaml~  signbot_12_controller.yaml~  signbot_1_controller_.yaml~  two_arms_control.yaml
signbot_2arms_gazebo/launch/: joint_state_controller.launch  joint_state_controller.launch~  l_controller.launch  l_controller.launch~  l_seperate_controller.launch  l_seperate_controller.launch~  r_controller.launch  r_controller.launch~  signbot_12_control.launch~  signbot_12_world.launch~  signbot_1_world_control.launch~  signbot_2arms_merge_control.launch  signbot_2arms_merge_control.launch~  signbot_2arms_separate_control.launch  signbot_2arms_separte_control.launch~  signbot_2arms_world.launch  signbot_v3_two_arm_control.launch~  two_arms_controller.launch  two_arms_controller.launch~
signbot_2arms_moveit_config/: CMakeLists.txt  package.xml
signbot_2arms_moveit_config/config/: controllers.yaml  controllers.yaml~  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  signbot_2arms.srdf
signbot_2arms_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  signbot_2arms_bringup_moveit.launch~  signbot_2arms_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
signbot_description/: CMakeLists.txt  package.xml
signbot_description/launch/: model_Gazebo_world.launch~  model_test.launch~  model_urdf_test.launch  model_urdf_test.launch~  model_xacro_test.launch  signbot_proprities.rviz  signbot_urdf.rviz
signbot_description/urdf/: revolute_arm.xacro  signbot_1.xacro  signbot_1_macros.xacro  signbot_2arms.xacro  signbot_full.xacro  signbot_full.xacro~  signbot_full_macros.xacro  signbot_generic_macros.xacro  signbot_hand.urdf  signbot_hand.xacro
signbot_final/signbot_bringup/: CMakeLists.txt  package.xml
signbot_final/signbot_control/: CMakeLists.txt  package.xml
signbot_final/signbot_db/: CMakeLists.txt  package.xml
signbot_final/signbot_f_description/: CMakeLists.txt  package.xml
signbot_final/signbot_gazebo/: CMakeLists.txt  package.xml
signbot_final/signbot_plugins/: CMakeLists.txt  package.xml
signbot_final/signbot_plugins/include/signbot_plugins/: classtranslator.h  gesture_info.h  signbot_controll.h  signbotdb.h
signbot_final/signbot_plugins/msg/: gestureInformation.msg
signbot_final/signbot_plugins/src/: classtranslator.cpp  example_1pose.cpp  example_bom_dia.cpp  example_multiarray_msg.cpp  example_other_multiarray_msg.cpp  example_signbot_core.cpp  example_signbot_db_core.cpp  signbot_2poses.cpp  signbot_controll.cpp  signbot_core.cpp  signbot_db_core.cpp  signbotdb.cpp  sub_then_pub.cpp  test_left_arm_trajetory.cpp  test_with_bodycontroller.cpp
signbot_full_gazebo/: CMakeLists.txt  package.xml
signbot_full_gazebo/controller/: l_seperate_control.yaml~  signbot_1_controller.yaml~
signbot_full_gazebo/launch/: joint_state_controller.launch  joint_state_controller.launch~  l_seperate_controller.launch~  left_fingers_controller.launch  left_fingers_controller.launch~  left_side_controller.launch  left_side_controller.launch~  r_controller.launch~  (+11 more)
signbot_full_moveit_config/: CMakeLists.txt  package.xml
signbot_trajetory/: CMakeLists.txt  package.xml
(+83 files in other folders)
